[gd_scene load_steps=7 format=3 uid="uid://udg7pbf0a2l6"]

[ext_resource type="Script" path="res://Main.gd" id="1_3wjqk"]
[ext_resource type="Shader" path="res://gol.gdshader" id="2_gt4ym"]
[ext_resource type="PackedScene" uid="uid://dtti7m06poba5" path="res://field_rect.tscn" id="3_otbrk"]
[ext_resource type="Script" path="res://ComputeShader.gd" id="4_uegd3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qpt2o"]
resource_local_to_scene = true
shader = ExtResource("2_gt4ym")
shader_parameter/width = null
shader_parameter/height = null
shader_parameter/vals = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0x1fc"]
resource_local_to_scene = true
shader = ExtResource("2_gt4ym")
shader_parameter/width = null
shader_parameter/height = null
shader_parameter/vals = null

[node name="Test" type="Node2D"]
script = ExtResource("1_3wjqk")

[node name="ComputeShader" type="Node2D" parent="."]
script = ExtResource("4_uegd3")

[node name="Label" type="Label" parent="."]
offset_left = 88.0
offset_top = 130.0
offset_right = 128.0
offset_bottom = 153.0

[node name="Instructions" type="Label" parent="."]
offset_left = 87.0
offset_top = 189.0
offset_right = 230.0
offset_bottom = 342.0
text = "Mouse to paint
Mouse+A to erase
Mouse+X to clear
Space to step
Hold F to play
Hold G to play fast
T to set frame to 0"

[node name="Field1Rect" parent="." instance=ExtResource("3_otbrk")]
material = SubResource("ShaderMaterial_qpt2o")

[node name="Field2Rect" parent="." instance=ExtResource("3_otbrk")]
material = SubResource("ShaderMaterial_0x1fc")
position = Vector2(913, 302)
